# EngineRenderer

./: CONTRIBUTING.md  Cargo.toml  ChangeLog.md  License  ReadMe.md  arborescence.md  quickstat.md
.cargo/: config.toml
.github/workflows/: ci-arm.yml  ci-x86.yml
examples/: render_blackhole.rs  render_car.rs  render_city.rs  render_cubes.rs  render_house.rs  render_spheres.rs  render_world.rs
fpstests/: aarch64-linux-android.md  x86_64-unknown-linux-gnu.md
src/: generator.rs  lib.rs  main.rs  realtime.rs
src/api/: mod.rs  scene_descriptor.rs
src/api/ai/: ai_manager.rs  capabilities.rs  mod.rs  prompt.rs  renderer.rs
src/api/animation/: animation_api.rs  mod.rs
src/api/camera/: controller.rs  mod.rs  presets.rs
src/api/engine/: animation_api.rs  cameras.rs  descriptor.rs  diagnostics.rs  engine_api.rs  mod.rs  objects.rs  rendering.rs  scenes.rs
src/api/materials/: builder.rs  catalog.rs  mod.rs  physics.rs  shortcuts.rs  spectrum.rs
src/api/objects/: composites.rs  mod.rs  primitives.rs  scene_object.rs
src/core/: mod.rs
src/utils/: mod.rs  utils.rs
tests/: android_benchmark_contract.rs  api_integration.rs  core_behaviors.rs  core_managers.rs  diagnose_smoke.rs  engine_api_basics.rs  engine_run.rs  generator_request.rs  geometry_intersections.rs  input_facades.rs  lod_and_scheduler.rs  material_catalog.rs  math_utils.rs  output_format.rs  realtime_profiles.rs  render_request_clamp.rs  render_request_presets.rs  rendering_internals.rs  scene_descriptor_robustness.rs  showcase_gallery.rs  simulation.rs  workspace_render_validation.rs
(+252 files in other folders)
