[package]
name = "enginerenderer"
version = "0.0.1"
edition = "2024"
authors = ["Rayan Morel"]
license = "MIT"
description = "A zero-dependency offline rendering engine in pure Rust — CPU path tracing, BVH acceleration, 16-band spectral rendering, PBR materials, animation & video export."
repository = "https://github.com/rayanmorel381-beep/EngineRenderer"
homepage = "https://github.com/rayanmorel381-beep/EngineRenderer"
documentation = "https://docs.rs/enginerenderer"
readme = "ReadMe.md"
keywords = ["rendering", "path-tracing", "3d", "animation", "ray-tracing"]
categories = ["graphics", "rendering", "multimedia", "simulation", "science"]
exclude = ["target/", "output/", "*.mp4", "*.png", "*.jpg"]

[lib]
name = "enginerenderer"
path = "src/lib.rs"

[[bin]]
name = "enginerenderer"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = 1
